fix(ctrn): crop thumbs to reveal them as too small

--- a/ctrn_assets/css/for-core-cms/django.cms.blog.app.item.css
+++ b/ctrn_assets/css/for-core-cms/django.cms.blog.app.item.css
@@ -6,3 +6,9 @@
         "desc";
     column-gap: unset;
 }
+
+/* To clearly render which thumbnails are made from too small an image */
+{# TODO: Update Core-CMS to do this, then remove this #}
+.blog-visual {
+    overflow: hidden;
+}
